made it look better

--- a/views/posts/memberPost.ejs
+++ b/views/posts/memberPost.ejs
@@ -1,5 +1,8 @@
-<div>
-  <div><%= message.text %></div>
-  <div><%= message.username %></div>
-  <div><%= message.timestamp %></div>
+<div class="container mb-1">
+  <hr class="solid" />
+  <div class="row"><%= message.text %></div>
+  <div class="row">
+    <div class="col"><%= message.username %></div>
+    <div class="col"><%= message.timestamp %></div>
+  </div>
 </div>
