--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title></title>
+    <meta charset="UTF-8" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Members Only Odin Project</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>hello world!</h1>
-    <a href="/sign-up">Sign Up Page </a>
-    <% if (currentUser) {%>
-    <h1>Welcome Back <%= currentUser.firstname %></h1>
-    <% if (!currentUser.member) { %>
-    <a href="/join">Join Club</a>
-    <a href="/log-out">Log Out</a>
-    <% } %> <% } else { %>
-    <h1>please log in</h1>
-    <form action="/log-in" method="POST">
-      <label for="email">Email</label>
-      <input id="email" name="email" placeholder="email" type="text" />
-      <label for="password">Password</label>
-      <input id="password" name="password" type="password" />
-      <button>Log In</button>
-    </form>
-    <%}%>
+    <div class="container text-center ">
+      <div class="container p-4 d-flex flex-column justify-content-center align-items-center">
+      <h1 class="mb-4">Members Only Message Board</h1>
+      <% if (currentUser) {%>
+      <h1>Welcome Back <%= currentUser.firstname %></h1>
+      <a class="btn btn-primary" href="/posts">View Posts</a>
+      <a class="btn btn-danger mt-3" href="/log-out">Log Out</a>
+      <% if (!currentUser.member) { %>
+      <a class="btn btn-primary" href="/join">Join Club</a>
+      <% } %> <% } else { %>
+        <div class=" p-4  " id="log-in">
+      <h2>Please Sign In</h2>
+     
+      <form action="/log-in" method="POST" class="form">
+
+          <label class="visually-hidden" for="email">Email</label>
+          <input id="email" name="email" placeholder="Email address" type="email" class="form-control mb-1" required autofocus />
+      
+          <label class="visually-hidden" for="password">Password</label>
+          <input id="password" name="password" type="password" placeholder="Password" class="form-control" required />
+       
+        <button class="btn btn-primary mt-3">Sign In</button>
+      </form>
+      <div>Or</div>
+      <a href="/sign-up" class="btn btn-primary">Sign Up</a>
+      <%}%>
+    
+        </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
