--- a/views/posts/newPost.ejs
+++ b/views/posts/newPost.ejs
@@ -2,14 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Members Only New Post</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <h1>New Post</h1>
-    <form action="/posts/new" method="POST">
-      <label for="text">Text:</label>
-      <input id="text" name="text" placeholder="text" type="text" />
-      <button type="submit">Post</button>
-    </form>
+    <div class="container p-3">
+      <h1>New Post</h1>
+      <form action="/posts/new" method="POST" class="container p-3">
+        <label for="text" class="visually-hidden">Text:</label>
+        <textarea
+          id="text"
+          name="text"
+          placeholder="Your post here..."
+          type="text"
+          class="form-control"
+        ></textarea>
+        <button type="submit" class="btn btn-primary mt-3">Post</button>
+      </form>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
