--- a/views/posts/posts.ejs
+++ b/views/posts/posts.ejs
@@ -2,19 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Members Only Posts</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Posts</h1>
-    <h1>Welcome Back <%= currentUser.firstname %></h1>
-    <a href="/log-out">Log Out</a>
-    <% if (!currentUser.member) { %>
-    <a href="/join">Join Club</a>
-    <% messages.forEach((message) => { %> <%- include('post', {message:
-    message}) %> <% }) %> <% } else { %>
-    <div>Staus: Member</div>
-    <% messages.forEach((message) => { %> <%- include('memberPost', {message:
-    message}) %> <% }) %> <%}%>
-    <a href="/posts/new" type="GET">New Post</a>
+    <div
+      class="container p-4 d-flex flex-column justify-content-center align-items-center"
+    >
+      <div class="container">
+        <h1>Posts</h1>
+        <div class="row justify-content-center align-items-center">
+          <h2 class="col">Welcome Back <b> <%= currentUser.firstname %></b></h2>
+          <a class="btn btn-danger col-2" href="/log-out">Log Out</a>
+        </div>
+      </div>
+      <div class="container m-3 p-3" id="posts">
+        <% if (!currentUser.member) { %>
+        <a class="btn btn-primary" href="/join">Join Club</a>
+
+        <% messages.forEach((message) => { %> <%- include('post', {message:
+        message}) %> <% }) %> <% } else { %>
+        <h5>Status: Member</h5>
+        <% messages.forEach((message) => { %> <%- include('memberPost',
+        {message: message}) %> <% }) %> <%}%>
+      </div>
+      <a class="btn btn-success mt-2" href="/posts/new" type="GET">New Post</a>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
