--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -13,31 +13,59 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Sign Up</h1>
-    <form action="" method="POST">
-      <label for="firstName">First Name:</label>
-      <input
-        type="text"
-        id="firstName"
-        name="firstName"
-        placeholder="First Name"
-      />
-      <label for="lastName">Last Name:</label>
-      <input
-        type="text"
-        id="lastName"
-        name="lastName"
-        placeholder="Last Name"
-      />
-      <label for="email">Email:</label>
-      <input id="email" name="email" placeholder="email" type="email" />
-      <div>Your email will be your username.</div>
-      <label for="password">Password</label>
-      <input id="password" name="password" type="password" />
-      <label for="admin">Admin</label>
-      <input type="checkbox" id="admin" name="admin" value="admin" />
-      <button type="submit">Sign Up</button>
-    </form>
+    <div
+      class="container p-3 mt-4 d-flex flex-column justify-content-center align-items-center"
+      id="sign-up"
+    >
+      <h1>Sign Up</h1>
+      <form action="" method="POST">
+        <label for="firstName" class="visually-hidden">First Name:</label>
+        <input
+          type="text"
+          id="firstName"
+          name="firstName"
+          placeholder="First Name"
+          class="form-control mb-1"
+          required
+        />
+        <label for="lastName" class="visually-hidden">Last Name:</label>
+        <input
+          type="text"
+          id="lastName"
+          name="lastName"
+          placeholder="Last Name"
+          class="form-control mb-1"
+          required
+        />
+        <label for="email" class="visually-hidden">Email:</label>
+        <input
+          id="email"
+          name="email"
+          placeholder="Email address"
+          type="email"
+          class="form-control mb-1"
+          aria-describedby="emailHelp"
+          required
+        />
+        <div id="emailHelp" class="form-text">
+          Your email will be your username.
+        </div>
+        <label for="password" class="visually-hidden">Password</label>
+        <input
+          id="password"
+          name="password"
+          type="password"
+          class="form-control mb-1"
+          placeholder="Password"
+          required
+        />
+        <div>
+          <label for="admin">Admin</label>
+          <input type="checkbox" id="admin" name="admin" value="admin" />
+        </div>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </form>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
